ทบทวน บทเรียนที่ 2

--- a/pd_01_setup.ipynb
+++ b/pd_01_setup.ipynb
@@ -51,10 +51,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "73bf2a31",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-17T14:58:19.480756800Z",
+     "start_time": "2026-02-17T14:58:18.633354300Z"
+    }
+   },
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -71,7 +74,122 @@
     "\n",
     "# 4. ดูหน้าตาข้อมูล 5 แถวแรก\n",
     "df.head()"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "รายชื่อชีททั้งหมด: ['Main_Data', 'Metadata']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "       MSISDN  RC_RATE SUBS_STATUS         CUST_FULL_NAME  PRODUCT_TYPE  \\\n",
+       "0  0960673105      599      Active               ABC Corp          FTTH   \n",
+       "1  0912345678      899      Active            XYZ Co.,Ltd        Mobile   \n",
+       "2  0812345678     1200   Suspended  Pah Nattapong Service        Mobile   \n",
+       "3  0612345678      449      Active          JukThong Tech  DATA SERVICE   \n",
+       "4  0998887776      299  Terminated          Sample Client          FTTH   \n",
+       "\n",
+       "  CONTRACT_START_DT CONTRACT_END_DT  \n",
+       "0        2025-03-01      2026-03-01  \n",
+       "1        2025-05-15      2026-05-15  \n",
+       "2        2024-10-20      2025-10-20  \n",
+       "3        2024-01-10      2025-01-10  \n",
+       "4        2024-12-01      2025-12-01  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MSISDN</th>\n",
+       "      <th>RC_RATE</th>\n",
+       "      <th>SUBS_STATUS</th>\n",
+       "      <th>CUST_FULL_NAME</th>\n",
+       "      <th>PRODUCT_TYPE</th>\n",
+       "      <th>CONTRACT_START_DT</th>\n",
+       "      <th>CONTRACT_END_DT</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0960673105</td>\n",
+       "      <td>599</td>\n",
+       "      <td>Active</td>\n",
+       "      <td>ABC Corp</td>\n",
+       "      <td>FTTH</td>\n",
+       "      <td>2025-03-01</td>\n",
+       "      <td>2026-03-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0912345678</td>\n",
+       "      <td>899</td>\n",
+       "      <td>Active</td>\n",
+       "      <td>XYZ Co.,Ltd</td>\n",
+       "      <td>Mobile</td>\n",
+       "      <td>2025-05-15</td>\n",
+       "      <td>2026-05-15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0812345678</td>\n",
+       "      <td>1200</td>\n",
+       "      <td>Suspended</td>\n",
+       "      <td>Pah Nattapong Service</td>\n",
+       "      <td>Mobile</td>\n",
+       "      <td>2024-10-20</td>\n",
+       "      <td>2025-10-20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0612345678</td>\n",
+       "      <td>449</td>\n",
+       "      <td>Active</td>\n",
+       "      <td>JukThong Tech</td>\n",
+       "      <td>DATA SERVICE</td>\n",
+       "      <td>2024-01-10</td>\n",
+       "      <td>2025-01-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0998887776</td>\n",
+       "      <td>299</td>\n",
+       "      <td>Terminated</td>\n",
+       "      <td>Sample Client</td>\n",
+       "      <td>FTTH</td>\n",
+       "      <td>2024-12-01</td>\n",
+       "      <td>2025-12-01</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -88,10 +206,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "e9211c0f",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-17T14:59:04.731860300Z",
+     "start_time": "2026-02-17T14:59:04.687742300Z"
+    }
+   },
    "source": [
     "# ดูประเภทข้อมูลของแต่ละคอลัมน์\n",
     "# ป๋าจะเห็นว่า MSISDN เป็น 'object' (ข้อความ) ตามที่เราตั้งใจไว้\n",
@@ -100,7 +221,31 @@
     "# ดูขนาดของไฟล์ ISP ชุดนี้\n",
     "rows, cols = df.shape\n",
     "print(f'ไฟล์นี้มีข้อมูลทั้งหมด {rows} รายการ และมี {cols} หัวข้อ')"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.DataFrame'>\n",
+      "RangeIndex: 5 entries, 0 to 4\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column             Non-Null Count  Dtype\n",
+      "---  ------             --------------  -----\n",
+      " 0   MSISDN             5 non-null      str  \n",
+      " 1   RC_RATE            5 non-null      int64\n",
+      " 2   SUBS_STATUS        5 non-null      str  \n",
+      " 3   CUST_FULL_NAME     5 non-null      str  \n",
+      " 4   PRODUCT_TYPE       5 non-null      str  \n",
+      " 5   CONTRACT_START_DT  5 non-null      str  \n",
+      " 6   CONTRACT_END_DT    5 non-null      str  \n",
+      "dtypes: int64(1), str(6)\n",
+      "memory usage: 412.0 bytes\n",
+      "ไฟล์นี้มีข้อมูลทั้งหมด 5 รายการ และมี 7 หัวข้อ\n"
+     ]
+    }
+   ],
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -125,10 +270,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "1c5c8547",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-17T14:59:33.133502400Z",
+     "start_time": "2026-02-17T14:59:33.097290800Z"
+    }
+   },
    "source": [
     "# 1. สมมติป๋ามีลิสต์ชื่อคอลัมน์วันที่ (ป๋าเพิ่มชื่อเข้าไปในนี้ได้เรื่อยๆ เลย)\n",
     "date_cols = [\n",
@@ -143,7 +291,30 @@
     "# 3. เช็กผลลัพธ์ด้วย .info()\n",
     "# ป๋าจะเห็นว่าคอลัมน์ในลิสต์เปลี่ยนเป็น datetime64[ns] ทั้งหมดแล้วครับ\n",
     "df.info()\n"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.DataFrame'>\n",
+      "RangeIndex: 5 entries, 0 to 4\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column             Non-Null Count  Dtype         \n",
+      "---  ------             --------------  -----         \n",
+      " 0   MSISDN             5 non-null      str           \n",
+      " 1   RC_RATE            5 non-null      int64         \n",
+      " 2   SUBS_STATUS        5 non-null      str           \n",
+      " 3   CUST_FULL_NAME     5 non-null      str           \n",
+      " 4   PRODUCT_TYPE       5 non-null      str           \n",
+      " 5   CONTRACT_START_DT  5 non-null      datetime64[us]\n",
+      " 6   CONTRACT_END_DT    5 non-null      datetime64[us]\n",
+      "dtypes: datetime64[us](2), int64(1), str(4)\n",
+      "memory usage: 412.0 bytes\n"
+     ]
+    }
+   ],
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -163,16 +334,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "69baed2f",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-17T14:59:33.196504600Z",
+     "start_time": "2026-02-17T14:59:33.149114Z"
+    }
+   },
    "source": [
     "df[date_cols] = df[date_cols].apply(pd.to_datetime, format='%Y-%m-%d')\n",
     "\n",
     "df[date_cols].head()\n",
     "# df.info()"
-   ]
+   ],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "  CONTRACT_START_DT CONTRACT_END_DT\n",
+       "0        2025-03-01      2026-03-01\n",
+       "1        2025-05-15      2026-05-15\n",
+       "2        2024-10-20      2025-10-20\n",
+       "3        2024-01-10      2025-01-10\n",
+       "4        2024-12-01      2025-12-01"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CONTRACT_START_DT</th>\n",
+       "      <th>CONTRACT_END_DT</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2025-03-01</td>\n",
+       "      <td>2026-03-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2025-05-15</td>\n",
+       "      <td>2026-05-15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2024-10-20</td>\n",
+       "      <td>2025-10-20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2024-01-10</td>\n",
+       "      <td>2025-01-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2024-12-01</td>\n",
+       "      <td>2025-12-01</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
