--- a/Lesson_2/pd_02_01.ipynb
+++ b/Lesson_2/pd_02_01.ipynb
@@ -188,6 +188,102 @@
     "\n",
     "display(df)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d376dfe",
+   "metadata": {},
+   "source": [
+    "## 👥 การกำจัดข้อมูลซ้ำซ้อน (Handling Duplicates)\n",
+    "---\n",
+    "\n",
+    "ข้อมูลซ้ำซ้อนคือศัตรูตัวร้ายของงานสถิติครับ ในบทนี้เราจะมาเรียนรู้วิธีการ \"ส่อง\" และ \"สอย\" ข้อมูลที่หน้าตาเหมือนกันทิ้งไป โดยยังคงรักษาความถูกต้องของข้อมูลไว้\n",
+    "\n",
+    "| คำศัพท์ (Technical Term) | คำอ่านไทย (Pronunciation) | ความหมาย (Translation/Definition) |\n",
+    "| :--- | :--- | :--- |\n",
+    "| **Duplicates** | ดู-พลิ-เคต | **ข้อมูลซ้ำซ้อน** (ข้อมูลที่มีค่าเหมือนกันในหลายแถว) |\n",
+    "| **Unique Value** | ยู-นีค แว-ลู | **ค่าที่ไม่ซ้ำ** (ข้อมูลที่มีเพียงหนึ่งเดียว) |\n",
+    "| **Subset** | ซับ-เซต | **กลุ่มย่อย** (ในที่นี้คือการระบุเฉพาะบางคอลัมน์เพื่อเช็กการซ้ำ) |\n",
+    "| **Keep First/Last** | คีพ เฟิร์ส/ลาสท์ | การเลือกเก็บแถวแรก หรือแถวสุดท้ายไว้ เมื่อเจอข้อมูลซ้ำ |\n",
+    "\n",
+    "### 🔍 สิ่งที่ป๋าต้องทบทวน (Review)\n",
+    "1. การใช้ `df.info()` เพื่อดูจำนวนแถวทั้งหมดก่อนและหลังลบ\n",
+    "2. การใช้ `sort_values()` เพื่อเรียงข้อมูลก่อนตัดสินใจลบ (เพื่อให้แถวที่ 'ล่าสุด' อยู่บนหรือล่างตามต้องการ)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d58d355",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ป๋าครับ! ไฟล์ที่มีข้อมูลซ้ำพร้อมให้ป๋าจัดการแล้วครับ\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# สร้างข้อมูลที่มีการซ้ำซ้อน (MSISDN 0960000001 มี 2 แถว)\n",
+    "duplicate_data = {\n",
+    "    'MSISDN': ['0960000001', '0960000001', '0960000002', '0960000003', '0960000003'],\n",
+    "    'CUST_NAME': ['A Corp', 'A Corp (New)', 'B Co.', 'C Shop', 'C Shop'],\n",
+    "    'UPDATE_DATE': ['2026-01-01', '2026-02-15', '2026-02-10', '2026-01-20', '2026-01-20'],\n",
+    "    'RC_RATE': [599, 699, 899, 1200, 1200]\n",
+    "}\n",
+    "\n",
+    "df_dup = pd.DataFrame(duplicate_data)\n",
+    "df_dup.to_excel('../Lesson_2/isp_duplicate_data.xlsx', index=False)\n",
+    "print(\"ป๋าครับ! ไฟล์ที่มีข้อมูลซ้ำพร้อมให้ป๋าจัดการแล้วครับ\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9abfb45",
+   "metadata": {},
+   "source": [
+    "## ✂️ วิธีการตรวจเช็กและลบ (Detect & Remove)\n",
+    "---\n",
+    "\n",
+    "ใน Pandas เรามีเครื่องมือหลัก 2 ตัวครับ:\n",
+    "1. `df.duplicated()` : ใช้เพื่อถามว่า \"แถวไหนบ้างที่ซ้ำ?\" (คืนค่าเป็น True/False)\n",
+    "2. `df.drop_duplicates()` : ใช้เพื่อ \"ลบแถวที่ซ้ำ\" ออกไปทันที\n",
+    "\n",
+    "> **จุดที่ป๋าต้องคิดเอง (Decision Point):** > ถ้า MSISDN ซ้ำกัน แต่ข้อมูลอื่นไม่เหมือนกัน (เช่น มีการอัปเดตราคา) ป๋าจะเก็บแถวไหนไว้? \n",
+    "> ปกติงาน ISP เราจะเก็บ **\"แถวล่าสุด\" (Keep Last)** ไว้ครับ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b64b9808",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1. โหลดข้อมูล (ทบทวนบทที่ 1)\n",
+    "df = pd.read_excel('../Lesson_2/isp_duplicate_data.xlsx', dtype={'MSISDN': str})\n",
+    "\n",
+    "# 2. แปลงวันที่ก่อนเพื่อให้เรียงลำดับได้ถูกต้อง (ทบทวนบทที่ 2)\n",
+    "df['UPDATE_DATE'] = pd.to_datetime(df['UPDATE_DATE'])\n",
+    "\n",
+    "# 3. ลองเช็กดูว่ามีแถวไหนซ้ำบ้าง (เช็กเฉพาะคอลัมน์ MSISDN)\n",
+    "print(\"จำนวนแถวที่ซ้ำ (พิจารณาจาก MSISDN):\")\n",
+    "print(df.duplicated(subset=['MSISDN']).sum())\n",
+    "\n",
+    "# 4. การลบแบบมีกลยุทธ์ (Keep the Latest)\n",
+    "# ขั้นแรก: เรียงตามวันที่อัปเดตจากเก่าไปใหม่\n",
+    "df = df.sort_values('UPDATE_DATE', ascending=True)\n",
+    "\n",
+    "# ขั้นสอง: ลบตัวซ้ำ โดยเก็บ \"ตัวสุดท้าย\" (ซึ่งก็คือวันที่ล่าสุด) เอาไว้\n",
+    "df_clean = df.drop_duplicates(subset=['MSISDN'], keep='last')\n",
+    "\n",
+    "print(f\"จากเดิม {len(df)} แถว เหลือข้อมูลที่ถูกต้อง {len(df_clean)} แถวครับป๋า\")\n",
+    "display(df_clean)"
+   ]
   }
  ],
  "metadata": {
