--- a/Lesson_2/pd_02_01_test.ipynb
+++ b/Lesson_2/pd_02_01_test.ipynb
@@ -191,6 +191,180 @@
     "\n",
     "display(df)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "c66f2ebc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MSISDN</th>\n",
+       "      <th>CUST_NAME</th>\n",
+       "      <th>UPDATE_DATE</th>\n",
+       "      <th>RC_RATE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0960000001</td>\n",
+       "      <td>A Corp</td>\n",
+       "      <td>2026-01-01</td>\n",
+       "      <td>599</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0960000001</td>\n",
+       "      <td>A Corp (New)</td>\n",
+       "      <td>2026-02-15</td>\n",
+       "      <td>699</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0960000002</td>\n",
+       "      <td>B Co.</td>\n",
+       "      <td>2026-02-10</td>\n",
+       "      <td>899</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0960000003</td>\n",
+       "      <td>C Shop</td>\n",
+       "      <td>2026-01-20</td>\n",
+       "      <td>1200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0960000003</td>\n",
+       "      <td>C Shop</td>\n",
+       "      <td>2026-01-20</td>\n",
+       "      <td>1200</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       MSISDN     CUST_NAME UPDATE_DATE  RC_RATE\n",
+       "0  0960000001        A Corp  2026-01-01      599\n",
+       "1  0960000001  A Corp (New)  2026-02-15      699\n",
+       "2  0960000002         B Co.  2026-02-10      899\n",
+       "3  0960000003        C Shop  2026-01-20     1200\n",
+       "4  0960000003        C Shop  2026-01-20     1200"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "จำนวนแถวที่ซ้ำ\n",
+      "2\n",
+      "จากเดิม 5 แถว เหลือข้อมูลที่ถูกต้อง 3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MSISDN</th>\n",
+       "      <th>CUST_NAME</th>\n",
+       "      <th>UPDATE_DATE</th>\n",
+       "      <th>RC_RATE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0960000003</td>\n",
+       "      <td>C Shop</td>\n",
+       "      <td>2026-01-20</td>\n",
+       "      <td>1200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0960000002</td>\n",
+       "      <td>B Co.</td>\n",
+       "      <td>2026-02-10</td>\n",
+       "      <td>899</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0960000001</td>\n",
+       "      <td>A Corp (New)</td>\n",
+       "      <td>2026-02-15</td>\n",
+       "      <td>699</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       MSISDN     CUST_NAME UPDATE_DATE  RC_RATE\n",
+       "4  0960000003        C Shop  2026-01-20     1200\n",
+       "2  0960000002         B Co.  2026-02-10      899\n",
+       "1  0960000001  A Corp (New)  2026-02-15      699"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df = pd.read_excel('../Lesson_2/isp_duplicate_data.xlsx', dtype={'MSISDN': str})\n",
+    "\n",
+    "df['UPDATE_DATE'] = pd.to_datetime(df['UPDATE_DATE'])\n",
+    "display(df)\n",
+    "print('จำนวนแถวที่ซ้ำ')\n",
+    "print(df.duplicated(subset=['MSISDN']).sum())\n",
+    "\n",
+    "df = df.sort_values('UPDATE_DATE', ascending=True)\n",
+    "\n",
+    "df_clean = df.drop_duplicates(subset=['MSISDN'], keep='last')\n",
+    "\n",
+    "print(f'จากเดิม {len(df)} แถว เหลือข้อมูลที่ถูกต้อง {len(df_clean)}')\n",
+    "display(df_clean)"
+   ]
   }
  ],
  "metadata": {
