Lesson 3 การจัดการข้อมูล และ Merge

--- a/Lesson_1/pd_03_status.ipynb
+++ b/Lesson_1/pd_03_status.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "91c57193",
    "metadata": {},
    "outputs": [
@@ -114,7 +114,7 @@
     "from datetime import datetime\n",
     "import numpy as np\n",
     "\n",
-    "excel_obj = pd.ExcelFile('mock_isp_data.xlsx')\n",
+    "excel_obj = pd.ExcelFile('../Lesson_1/mock_isp_data.xlsx')\n",
     "sheets_name = excel_obj.sheet_names\n",
     "print(sheets_name)\n",
     "\n",
