ทบทวน Lesson 3 การจัดการข้อมูล และ Merge

--- a/Lesson_3/pd_03_01.ipynb
+++ b/Lesson_3/pd_03_01.ipynb
@@ -182,7 +182,7 @@
     "from datetime import datetime\n",
     "\n",
     "# 1. ใช้ ExcelFile เพื่อเปิดไฟล์ (ทบทวนบทที่ 1)\n",
-    "xls = pd.ExcelFile('isp_supply_chain.xlsx')\n",
+    "xls = pd.ExcelFile('..\\Lesson_3\\isp_supply_chain.xlsx')\n",
     "\n",
     "# 2. อ่านทั้ง 3 ชีทออกมา\n",
     "orders = xls.parse('Orders')\n",
