เพิ่มคลาส Money และทดสอบการทำงานใน Lesson 4

--- a/Lesson_4/pd_04_01.ipynb
+++ b/Lesson_4/pd_04_01.ipynb
@@ -131,6 +131,116 @@
     "    except Exception as e:\n",
     "        print(f\"❌ โดนดักจับ Error: {e}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60b80e1a",
+   "metadata": {},
+   "source": [
+    "# 💰 บทที่ 4.4: การจัดการเรื่องเงิน (The Money Value Object)\n",
+    "---\n",
+    "\n",
+    "ในระบบเคลมสินค้า \"เงิน\" ไม่ใช่แค่ตัวเลขครับ แต่มันคือ **\"มูลค่าที่มีสกุลกำกับ\"** เสมอ เราจะไม่ยอมให้ `Amount` ลอยไปลอยมาโดยไม่มี `Currency` ครับ\n",
+    "\n",
+    "| คำศัพท์ (Technical Term) | คำอ่านไทย (Pronunciation) | ความหมาย (Translation/Definition) |\n",
+    "| :--- | :--- | :--- |\n",
+    "| **Encapsulation** | เอน-แคป-ซู-เล-ชัน | **การห่อหุ้ม** ข้อมูลและพฤติกรรมไว้ด้วยกัน (เช่น เอาเลขกับสกุลเงินมามัดรวมกัน) |\n",
+    "| **Immutability** | อิม-มิว-ทา-บิล-ลิ-ตี | **การไม่เปลี่ยนแปลงค่า** (Value Object เมื่อสร้างแล้วต้องเปลี่ยนค่าไม่ได้ ถ้าจะเปลี่ยนต้องสร้างอันใหม่) |\n",
+    "| **Invariant** | อิน-แว-เรียนต์ | **กฎที่ต้องเป็นจริงเสมอ** (เช่น จำนวนเงินห้ามติดลบ) |\n",
+    "| **Primitive Obsession** | พริ-มิ-ทีฟ ออบ-เซส-ชัน | **การยึดติดกับข้อมูลพื้นฐาน** (อาการที่โปรแกรมเมอร์ชอบใช้ int, float แทนการสร้าง Object เฉพาะทาง) |\n",
+    "\n",
+    "**🔍 กฎของ Money ในระบบของป๋า:**\n",
+    "1. **Amount (จำนวนเงิน):** ต้องเป็นตัวเลข และห้ามติดลบ (เพราะนี่คือยอดชดเชย)\n",
+    "2. **Currency (สกุลเงิน):** ต้องเป็นตัวอักษร 3 ตัว (เช่น THB, USD)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6493574e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# -----------------------------------------\n",
+    "# Test Cases สำหรับ Money\n",
+    "# -----------------------------------------\n",
+    "\n",
+    "def test_valid_money_creation():\n",
+    "    # จำลองค่าจากไฟล์ป๋า: 886.26 THB\n",
+    "    m = Money(amount=886.26, currency=\"THB\")\n",
+    "    assert m.amount == 886.26\n",
+    "    assert m.currency == \"THB\"\n",
+    "\n",
+    "def test_money_negative_amount():\n",
+    "    # กฎคือเงินเคลมต้องไม่ติดลบ ถ้าติดลบต้องพัง (Error)\n",
+    "    with pytest.raises(ValidationError):\n",
+    "        Money(amount=-100.0, currency=\"THB\")\n",
+    "\n",
+    "def test_money_invalid_currency_format():\n",
+    "    # สกุลเงินต้องมี 3 ตัวอักษรเท่านั้น (มาตรฐาน ISO)\n",
+    "    with pytest.raises(ValidationError):\n",
+    "        Money(amount=100.0, currency=\"THAI_BAHT\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36bc56cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pydantic import BaseModel, Field, field_validator\n",
+    "\n",
+    "class Money(BaseModel):\n",
+    "    \"\"\"\n",
+    "    Value Object สำหรับจัดการเรื่องเงินและความถูกต้องของสกุลเงิน\n",
+    "    \"\"\"\n",
+    "    # กฎ: ห้ามติดลบ (ge=0)\n",
+    "    amount: float = Field(..., ge=0) \n",
+    "    # กฎ: ต้องมี 3 ตัวอักษร (เช่น THB) และทำเป็นตัวพิมพ์ใหญ่เสมอ\n",
+    "    currency: str = Field(..., min_length=3, max_length=3)\n",
+    "\n",
+    "    @field_validator('currency')\n",
+    "    def currency_must_be_uppercase(cls, v):\n",
+    "        return v.upper()\n",
+    "\n",
+    "    # แถม: พลังพิเศษให้ Money สามารถแสดงผลสวยๆ ได้เอง\n",
+    "    def __str__(self):\n",
+    "        return f\"{self.amount:,.2f} {self.currency}\"\n",
+    "\n",
+    "# --- ลองทดสอบการใช้งาน ---\n",
+    "if __name__ == \"__main__\":\n",
+    "    try:\n",
+    "        # 1. สร้างเงินจากข้อมูลจริงของป๋า\n",
+    "        claim_money = Money(amount=1477.50, currency=\"thb\")\n",
+    "        print(f\"✅ สร้างเงินสำเร็จ: {claim_money}\") # ผลลัพธ์จะเป็น 1,477.50 THB (เพราะมี __str__)\n",
+    "\n",
+    "        # 2. ลองแกล้งใส่เงินติดลบ\n",
+    "        fake_money = Money(amount=-50, currency=\"USD\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ ระบบดักจับเงินติดลบได้: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5a92af2",
+   "metadata": {},
+   "source": [
+    "💡 ทำไมป๋าต้องทำแบบนี้? (วิศวกรรมซอฟต์แวร์ 101)\n",
+    "ถ้าป๋าใช้แค่ float ในไฟล์ Excel แล้ววันหนึ่งเกิดมีไฟล์จากต่างประเทศส่งเงิน USD มาปน ป๋าอาจจะเผลอเอา 100 (USD) ไปบวกกับ 100 (THB) ได้ผลลัพธ์เป็น 200 ซึ่งผิดมหันต์!\n",
+    "\n",
+    "แต่ถ้าป๋าใช้ Money Value Object ป๋าสามารถเขียนโค้ดเพิ่มในคลาสนี้ได้ว่า:\n",
+    "\n",
+    "\"ถ้าจะเอา Money มาบวกกัน ต้องเช็กก่อนว่า Currency ตรงกันไหม ถ้าไม่ตรงให้ Error ทันที\"\n",
+    "\n",
+    "นี่คือการป้องกัน Bug ตั้งแต่ระดับ \"รากฐาน\" ครับป๋า\n",
+    "\n",
+    "สรุปสถานะตอนนี้:\n",
+    "\n",
+    "ป๋ามี TrackingNumber ไว้จัดการรหัสพัสดุ\n",
+    "\n",
+    "ป๋ามี Money ไว้จัดการยอดชดเชย"
+   ]
   }
  ],
  "metadata": {
