--- a/Lesson_4/pd_04_01_test.ipynb
+++ b/Lesson_4/pd_04_01_test.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "47223791",
    "metadata": {},
    "outputs": [
@@ -54,6 +54,17 @@
     "            raise ValueError('Tracking Number สั้นเกินไป')\n",
     "        return v.strip()\n",
     "    \n",
+    "class Money(BaseModel):\n",
+    "    amount: float = Field(..., ge=0)\n",
+    "    currency: str = Field(..., min_length=3, max_length=3)\n",
+    "\n",
+    "    @field_validator('currency')\n",
+    "    def currency_must_be_uppercase(cls, v):\n",
+    "        return v.upper()\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return f'{self.amount:,.2f} {self.currency}'\n",
+    "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    good_track = TrackingNumber(value='TH1234567890')\n",
@@ -62,8 +73,39 @@
     "    try:\n",
     "        bad_track = TrackingNumber(value='TH12')\n",
     "    except ValueError as e:\n",
-    "        print(f'โดนดัก error {e}')\n"
+    "        print(f'โดนดัก error {e}')\n",
+    "\n",
+    "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "a3efa54d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_valid_money_creation():\n",
+    "    m = Money(amount=886.26, currency='THB')\n",
+    "    assert m.amount == 886.26\n",
+    "    assert m.currency == 'THB'\n",
+    "\n",
+    "def test_money_negative_amount():\n",
+    "    with pytest.raises(ValidationError):\n",
+    "        Money(amount=-100.0, currency='THB')\n",
+    "\n",
+    "def test_money_invalid_currency_format():\n",
+    "    with pytest.raises(ValidationError):\n",
+    "        Money(amount=100.0, currenry='THAI_BAHT')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1aa9edd4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
