เพิ่มคลาส TicketId และ ClaimTicket พร้อมทดสอบการทำงานใน Lesson 4

--- a/Lesson_4/pd_04_01.ipynb
+++ b/Lesson_4/pd_04_01.ipynb
@@ -241,6 +241,131 @@
     "\n",
     "ป๋ามี Money ไว้จัดการยอดชดเชย"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dccdf955",
+   "metadata": {},
+   "source": [
+    "# 🏛️ บทที่ 4.5: เอนทิตี - สิ่งที่มีตัวตนและตัวตน (Entity & Identity)\n",
+    "---\n",
+    "\n",
+    "ในขณะที่ Value Object สนใจแค่ \"ค่า\" (ถ้าเงิน 100 บาทเท่ากัน ก็คือเหมือนกัน) แต่ **Entity** สนใจเรื่อง **\"ตัวตน\" (Identity)** ครับ ใบเคลมสองใบอาจจะมียอดเงินเท่ากัน แต่ถ้าเลข Ticket ต่างกัน มันคือคนละใบกันครับ\n",
+    "\n",
+    "| คำศัพท์ (Technical Term) | คำอ่านไทย (Pronunciation) | ความหมาย (Translation/Definition) |\n",
+    "| :--- | :--- | :--- |\n",
+    "| **Entity** | เอน-ติ-ตี | **วัตถุหลักที่มีเอกลักษณ์** มี ID ประจำตัว และมีการเปลี่ยนแปลงตามกาลเวลา |\n",
+    "| **Identity** | ไอ-เดน-ติ-ตี | **เอกลักษณ์** หรือรหัสที่ใช้ระบุตัวตน (เช่น ticket_id) |\n",
+    "| **Lifecycle** | ไลฟ์-ไซ-เคิล | **วงจรชีวิต** ตั้งแต่ถูกสร้าง, รออนุมัติ, จนถึงจ่ายเงินสำเร็จ |\n",
+    "| **Optimistic Locking** | ออป-ติ-มิส-ติก ล็อก-กิ้ง | **การป้องกันข้อมูลชนกัน** โดยใช้เลขเวอร์ชัน (ป้องกันป๋าสองคนกดบันทึกพร้อมกันแล้วข้อมูลทับกัน) |\n",
+    "\n",
+    "**🔍 กฎของ ClaimTicket ในระบบของป๋า:**\n",
+    "1. **ต้องมี ID:** เราจะสร้าง `TicketId` มาเป็นกุญแจหลัก\n",
+    "2. **ต้องมีองค์ประกอบ:** ประกอบด้วย `TrackingNumber` และยอดเงิน `Money`\n",
+    "3. **ต้องมี Version:** สำหรับทำ Optimistic Locking ตามมาตรฐานวิศวกรรมซอฟต์แวร์"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8244bb3d",
+   "metadata": {},
+   "source": [
+    "📝 ส่วนที่ 2: TDD Phase 1 - RED (เขียนเทสความสัมพันธ์)\n",
+    "ป๋าต้องสร้าง TicketId ขึ้นมาก่อน เพื่อไม่ให้ใช้ str ตรงๆ ตามกฎของเราครับ เพิ่มโค้ดนี้ลงในไฟล์เทสครับ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44a1af01",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# -----------------------------------------\n",
+    "# Test Cases สำหรับ ClaimTicket (Entity)\n",
+    "# -----------------------------------------\n",
+    "\n",
+    "def test_claim_ticket_creation():\n",
+    "    # 1. เตรียมชิ้นส่วน (Value Objects)\n",
+    "    tid = TicketId(value=\"CMP-1001\")\n",
+    "    tn = TrackingNumber(value=\"TH1234567890\")\n",
+    "    price = Money(amount=886.26, currency=\"THB\")\n",
+    "\n",
+    "# อธิบาย: เหมือนป๋าจะประกอบรถยนต์ ป๋าต้องมี \"ล้อ\" มี \"พวงมาลัย\" มี \"เครื่องยนต์\" ก่อนครับ\n",
+    "\n",
+    "# บรรทัดนี้เรากำลังสร้าง Value Objects 3 ตัว เตรียมไว้ในมือ ซึ่งแต่ละตัวมีความฉลาดในตัวเอง (เช่น Money จะรู้ว่าห้ามติดลบ)\n",
+    "\n",
+    "    # 2. สร้าง Entity\n",
+    "    ticket = ClaimTicket(\n",
+    "        ticket_id=tid,\n",
+    "        tracking_number=tn,\n",
+    "        compensation_amount=price\n",
+    "    )\n",
+    "\n",
+    "# อธิบาย: ป๋าเอาชิ้นส่วนในมือ (tid, tn, price) มาส่งให้คลาส ClaimTicket เพื่อ \"ประกอบร่าง\" เป็นใบเคลมที่มีตัวตนจริง ๆ (Entity)\n",
+    "\n",
+    "# สังเกตว่าเราส่ง Object เข้าไปทั้งก้อน ไม่ได้ส่งแค่ string \"CMP-1001\" เข้าไปตรง ๆ ตามกฎ No Primitives in Domain ที่ป๋าตั้งไว้ครับ\n",
+    "\n",
+    "    # 3. ตรวจสอบความถูกต้อง\n",
+    "    assert ticket.ticket_id.value == \"CMP-1001\"\n",
+    "    assert ticket.version == 1  # เริ่มต้นต้องเป็นเวอร์ชัน 1\n",
+    "\n",
+    "# อธิบาย: ป๋ากำลังสั่งคอมพิวเตอร์ว่า \"เฮ้ย! ตรวจดูซิว่า ใบเคลมที่สร้างเสร็จแล้วเนี่ย รหัสข้างในมันยังเป็น CMP-1001 เหมือนเดิมไหม?\" ถ้าใช่ เทสนี้จะผ่าน ถ้าไม่ใช่ เทสจะฟ้องว่าพังครับ\n",
+    "\n",
+    "# อธิบาย: นี่คือหัวใจของ Optimistic Locking ที่ป๋าเคยบอกจุกทองครับ ป๋ากำลังยืนยันว่า \"ใบเคลมที่เพิ่งสร้างใหม่สด ๆ ร้อน ๆ ต้องมีเวอร์ชันเริ่มต้นที่เลข 1 เท่านั้น\" เพื่อเอาไว้เช็กในอนาคตว่ามีใครมาแอบแก้ข้อมูลป๋าหรือเปล่า"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb1d08e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pydantic import BaseModel, Field\n",
+    "\n",
+    "# --- ทบทวน: สร้าง TicketId Value Object สั้นๆ ---\n",
+    "class TicketId(BaseModel):\n",
+    "    value: str = Field(..., min_length=1)\n",
+    "\n",
+    "# --- นี่คือ Entity หลักของป๋า ---\n",
+    "class ClaimTicket(BaseModel):\n",
+    "    \"\"\"\n",
+    "    Entity: ใบเคลมสินค้า\n",
+    "    ทำหน้าที่รวบรวมข้อมูลการเคลมและควบคุมกฎธุรกิจ\n",
+    "    \"\"\"\n",
+    "    ticket_id: TicketId\n",
+    "    tracking_number: TrackingNumber\n",
+    "    compensation_amount: Money\n",
+    "    \n",
+    "    # เพิ่มระบบ Optimistic Locking ตามที่ป๋าต้องการ\n",
+    "    version: int = Field(default=1)\n",
+    "\n",
+    "    # Logic ธุรกิจ: การอัปเดตยอดเงินเคลม\n",
+    "    def update_compensation(self, new_money: Money):\n",
+    "        \"\"\"\n",
+    "        กฎ: การอัปเดตยอดเงิน ต้องเพิ่มเลขเวอร์ชันเสมอ\n",
+    "        \"\"\"\n",
+    "        self.compensation_amount = new_money\n",
+    "        self.version += 1\n",
+    "        print(f\"📢 อัปเดตยอดเงินเป็น {new_money} (Version: {self.version})\")\n",
+    "\n",
+    "# --- ลองรันการทำงานจริง ---\n",
+    "if __name__ == \"__main__\":\n",
+    "    # 1. สร้างใบเคลม (Data จากไฟล์ป๋า)\n",
+    "    my_ticket = ClaimTicket(\n",
+    "        ticket_id=TicketId(value=\"CMP-1001\"),\n",
+    "        tracking_number=TrackingNumber(value=\"TH1234567890\"),\n",
+    "        compensation_amount=Money(amount=886.26, currency=\"THB\")\n",
+    "    )\n",
+    "\n",
+    "    print(f\"📦 ใบเคลมถูกสร้าง: {my_ticket.ticket_id.value}\")\n",
+    "    print(f\"💰 ยอดเดิม: {my_ticket.compensation_amount}\")\n",
+    "\n",
+    "    # 2. ลองอัปเดตยอดเงิน (เช่น มีการคำนวณใหม่จากไฟล์ที่ 2)\n",
+    "    new_price = Money(amount=950.00, currency=\"THB\")\n",
+    "    my_ticket.update_compensation(new_price)"
+   ]
   }
  ],
  "metadata": {
