--- a/Lesson_4/pd_04_01_test.ipynb
+++ b/Lesson_4/pd_04_01_test.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "47223791",
    "metadata": {},
    "outputs": [
@@ -54,16 +54,6 @@
     "            raise ValueError('Tracking Number สั้นเกินไป')\n",
     "        return v.strip()\n",
     "    \n",
-    "class Money(BaseModel):\n",
-    "    amount: float = Field(..., ge=0)\n",
-    "    currency: str = Field(..., min_length=3, max_length=3)\n",
-    "\n",
-    "    @field_validator('currency')\n",
-    "    def currency_must_be_uppercase(cls, v):\n",
-    "        return v.upper()\n",
-    "    \n",
-    "    def __str__(self):\n",
-    "        return f'{self.amount:,.2f} {self.currency}'\n",
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
@@ -74,14 +64,13 @@
     "        bad_track = TrackingNumber(value='TH12')\n",
     "    except ValueError as e:\n",
     "        print(f'โดนดัก error {e}')\n",
-    "\n",
-    "    "
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "a3efa54d",
+   "execution_count": 3,
+   "id": "96d13874",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,11 +90,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
+   "id": "8e67e033",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ สร้างเงินสำเร็จ: 1,477.50 THB\n",
+      "❌ ระบบดักจับเงินติดลบได้: 1 validation error for Money\n",
+      "amount\n",
+      "  Input should be greater than or equal to 0 [type=greater_than_equal, input_value=-50, input_type=int]\n",
+      "    For further information visit https://errors.pydantic.dev/2.12/v/greater_than_equal\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Money(BaseModel):\n",
+    "    amount: float = Field(..., ge=0)\n",
+    "    currency: str = Field(..., min_length=3, max_length=3)\n",
+    "\n",
+    "    @field_validator('currency')\n",
+    "    def currency_must_be_uppercase(cls, v):\n",
+    "        return v.upper()\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return f'{self.amount:,.2f} {self.currency}'\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    try:\n",
+    "        # 1. สร้างเงินจากข้อมูลจริงของป๋า\n",
+    "        claim_money = Money(amount=1477.50, currency=\"thb\")\n",
+    "        print(f\"✅ สร้างเงินสำเร็จ: {claim_money}\") # ผลลัพธ์จะเป็น 1,477.50 THB (เพราะมี __str__)\n",
+    "\n",
+    "        # 2. ลองแกล้งใส่เงินติดลบ\n",
+    "        fake_money = Money(amount=-50, currency=\"USD\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ ระบบดักจับเงินติดลบได้: {e}\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "1aa9edd4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def test_claim_ticket_creation():\n",
+    "    tid = TicketId(value='CMP-1001')\n",
+    "    tn = TrackingNumber(value='TH1234567890')\n",
+    "    price = Money(amount=886.26, currency='THB')\n",
+    "\n",
+    "    ticket = ClaimTicket(\n",
+    "        ticket_id=tid,\n",
+    "        tracking_number=tn,\n",
+    "        compensation_amount=price\n",
+    "    )\n",
+    "\n",
+    "    assert ticket.ticket_id.value == 'CMP-1001'\n",
+    "    assert ticket.version == 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "ff23ca59",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ใบเคลมลูกค้าถูกสร้าง: CMP-1001\n",
+      " ยอดเดิม: 886.26 THB\n",
+      " อัพเดทยอดเงินเป็น 950.00 THB (Version: 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "class TicketId(BaseModel):\n",
+    "    value: str = Field(..., min_length=1)\n",
+    "\n",
+    "\n",
+    "class ClaimTicket(BaseModel):\n",
+    "    ticket_id: TicketId\n",
+    "    tracking_number: TrackingNumber\n",
+    "    compensation_amount:Money\n",
+    "\n",
+    "    version: int = Field(default=1)\n",
+    "\n",
+    "    def update_compensation(self, new_money: Money):\n",
+    "        self.compensation_amount = new_money\n",
+    "        self.version += 1\n",
+    "        print(f' อัพเดทยอดเงินเป็น {new_money} (Version: {self.version})')\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    try:\n",
+    "            \n",
+    "        my_ticket = ClaimTicket(\n",
+    "            ticket_id=TicketId(value='CMP-1001'),\n",
+    "            tracking_number=TrackingNumber(value='TH1234567890'),\n",
+    "            compensation_amount=Money(amount=886.26, currency='THB')\n",
+    "        )\n",
+    "        print(f'ใบเคลมลูกค้าถูกสร้าง: {my_ticket.ticket_id.value}')\n",
+    "        print(f' ยอดเดิม: {my_ticket.compensation_amount}')\n",
+    "\n",
+    "        new_price = Money(amount=950.00, currency='THB')\n",
+    "        my_ticket.update_compensation(new_price)\n",
+    "    except Exception as e:\n",
+    "        print(f'{e}') \n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
